fix: 🐛 pokemon game versions overflow hidden fixed

--- a/src/pages/pokemon-details/index.scss
+++ b/src/pages/pokemon-details/index.scss
@@ -18,7 +18,6 @@
     > div {
       border-radius: var(--global-border-radius);
       box-sizing: border-box;
-      overflow: hidden;
     }
 
     &__actions {
@@ -85,6 +84,7 @@
       background-color: var(--primary-color);
       padding: 24px;
       box-sizing: border-box;
+      border-radius: var(--global-border-radius);
 
       &__info {
         display: flex;
@@ -144,7 +144,6 @@
 
         &__game-versions {
           order: 1;
-          overflow: visible !important;
         }
       }
 
